--- a/Group41_A5.ipynb
+++ b/Group41_A5.ipynb
@@ -7,7 +7,7 @@
         "id": "8abef9e0"
       },
       "source": [
-        "# ECSE 415 - Assignment 4: Object Recognition"
+        "# ECSE 415 - Assignment 5: Video Analysis"
       ]
     },
     {
@@ -33,7 +33,7 @@
       },
       "source": [
         "## Introduction\n",
-        "The goal of this assignment is to learn how to use object recognition models for road sign objects, by applying deep learning methods."
+        "The goal of this assignment is "
       ]
     },
     {
@@ -66,24 +66,6 @@
         "Run this in a terminal first\n",
         "\n",
         "*python3 -m venv venv && source venv/bin/activate && python -m pip install --upgrade pip && python -m pip install -r requirements.txt*"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 106,
-      "id": "jpfwlEUWgpOG",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jpfwlEUWgpOG",
-        "outputId": "975442bc-6eb4-4aa6-d24f-f8645086ff8f"
-      },
-      "outputs": [],
-      "source": [
-        "# Mount Google Drive\n",
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
       ]
     },
     {
@@ -174,11 +156,10 @@
       ],
       "source": [
         "# Set environment vars BEFORE importing torch/CUDA initialization\n",
-        "# import os\n",
-        "# os.environ[\"TORCH_USE_CUDA_DSA\"] = \"1\"\n",
+        "import os\n",
+        "os.environ[\"TORCH_USE_CUDA_DSA\"] = \"1\"\n",
         "\n",
-        "# from torchvision.models.detection import fasterrcnn_mobilenet_v3_large_fpn\n",
-        "# import torch\n",
+        "import torch\n",
         "\n",
         "# Choose device --> for CUDA DSA (on pcuter with compatible GPU)\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -252,14 +233,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": null,
       "id": "11266573",
       "metadata": {
         "id": "11266573"
       },
       "outputs": [],
       "source": [
-        "#ata_path = '/content/drive/MyDrive/Ecse415/Assignments/Assignment4/traffic_signs/'\n",
         "data_path = './Road_Signs_Detection_Dataset/'\n",
         "\n",
         "train_images_path = os.path.join(data_path, \"train/images/\")\n",
@@ -267,6 +247,46 @@
         "test_images_path = os.path.join(data_path, \"test/images/\")\n",
         "\n",
         "sample_submission_path = \"sample_submission.csv\"\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "abb8acba",
+      "metadata": {
+        "id": "abb8acba"
+      },
+      "source": [
+        "## `1` Data Preparation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "afbcaeba",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "id": "4c09b708",
+      "metadata": {},
+      "source": [
+        "## `2` Model Implementation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "8f2ff10a",
+      "metadata": {},
+      "source": [
+        "## `3` Model Evaluation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cce3e412",
+      "metadata": {},
+      "source": [
+        "## `4` Prediction & Kaggle Competition"
       ]
     }
   ],
